# endee

./: .env.example  .gitignore  COMPLETION_CHECKLIST.md  DELIVERABLES.md  Dockerfile  PROJECT_COMPLETE.md  PROJECT_LOCATION.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
docs/: API.md  DEPLOYMENT.md  SYSTEM_DESIGN.md
scripts/: example_search.py  ingest_samples.py
src/: __init__.py  config.py  embedding_service.py  endee_client.py  main.py  rag_service.py
tests/: test_rag_system.py
