[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endee-rag-system"
version = "1.0.0"
description = "AI-powered RAG system using Endee vector database for semantic search and document intelligence"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "vector-database",
    "rag",
    "semantic-search",
    "ai",
    "embeddings",
    "endee",
    "llm"
]
dependencies = [
    "FastAPI>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.1.2",
    "numpy>=1.24.3",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "openai>=1.6.1",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "ruff>=0.1.11",
    "mypy>=1.7.1",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"
